--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
       "es2017",
       "dom"
     ],
-    "module": "es2015",
+    "module": "commonjs",
     "baseUrl": "./",
     "allowSyntheticDefaultImports":true
   },
