--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "license": "MIT",
   "scripts": {
-    "ex": "tsc && node ./dist/out-tsc/test.js"
+    "ex": "tsc && node ./dist/out-tsc/test.js",
+    "test": "ts-node node_modules/jasmine/bin/jasmine --config=jasmine.json"
   },
   "private": true,
   "dependencies": {
@@ -11,8 +12,10 @@
     "underscore": "^1.9.1"
   },
   "devDependencies": {
+    "@types/jasmine": "^3.5.0",
     "@types/node": "^9.6.48",
-    "ts-node": "^6.0.1",
+    "jasmine": "^3.5.0",
+    "ts-node": "^6.2.0",
     "tslint": "^5.20.1",
     "typedoc": "^0.15.0",
     "typescript": "^3.1.6"
